--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ hello/.DS_Store
 *.pbxproj
 dsa/dsa.xcodeproj/project.pbxproj
 *.xcworkspace*
+*.xcodeproj*
+DSA.xcworkspace/xcuserdata/codebreaker.xcuserdatad/UserInterfaceState.xcuserstate
