--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ dsa/dsa.xcodeproj/project.pbxproj
 *.xcworkspace*
 *.xcodeproj*
 DSA.xcworkspace/xcuserdata/codebreaker.xcuserdatad/UserInterfaceState.xcuserstate
+dsa/dsa.xcodeproj/project.xcworkspace/xcuserdata/codebreaker.xcuserdatad/UserInterfaceState.xcuserstate
+dsa/dsa.xcodeproj/xcuserdata/codebreaker.xcuserdatad/xcschemes/xcschememanagement.plist
