added new function

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ dsa/dsa.xcodeproj/project.xcworkspace/xcuserdata/codebreaker.xcuserdatad/UserInt
 dsa/dsa.xcodeproj/project.pbxproj
 dsa/dsa.xcodeproj/project.pbxproj
 /win_dev/.vs/win_dev
+/win_dev/win_dev/x64/Debug
