Add docs and tests across array/recursion problems
- bringzerolast: problem statement, TC/SC, tests; added second approach bzlast2 and bugfix
- partitionnegpos: problem header, variants (negatives-first, positives-first, stable), tests
- uniqTargetSum (Combination Sum II): cleaned logic (i+1), skip dups, base guards, tests
- targetsum: earlier doc + pruning retained
- Update .gitignore to ignore Makefile/makefile globally

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@
 # Debug symbols and build artifacts
 *.dSYM/
 .dSYM
-hello/makefile
+makefile
+Makefile
 hello/.DS_Store
 .vscode/tasks.json
 .vscode/launch.json
